--- a/index.html
+++ b/index.html
@@ -4,14 +4,36 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Technical Documentation Page (topic TBD)</title>
-</head>
+    <title>Main Body of a scientific paper</title>
+    </head>
 <main id="main-doc">
-    <section><header></header></section>
-    <section><header></header></section>
-    <section><header></header></section>
-    <section><header></header></section>
-    <section><header></header></section>
+    <section class="main-section" id="scientific-paper">
+        <header>Scientific paper</header>
+        <p>A scientific paper is a document detailing the results or progress 
+            of scientific research that addresses a specified research problem.
+            When peer-reviewed and published in scientific journals, they are also 
+            referred to as ("scientific" or "journal" or "academic") articles, papers, 
+            reports, or publications.</p>
+        <p>Scientific papers are written in technical writing styles, and follow formats 
+            that are usually specified by scientific organizations or publishers. The target
+            audience are researchers and organizations that are interested in the continued 
+            generation of results, progress, knowledge, innovation, inventions or 
+            technologies that emerge from the reported research.
+        </p>
+    </section>
+    <section class="main-section" id="Introduction">
+        <header>Introduction</header>
+        <p>The introduction contains  </p>
+    </section>
+    <section class="main-section" id="Materials-methods">
+        <header>Materials and Methods</header></section>
+    <section class="main-section" id="Results-discussions">
+        <header>Results and Discussion</header></section>
+    <section class="main-section" id="Summary">
+        <header>Summary, Conclusions or Recommendations (optional)</header></section>
+    <section class="main-section" id="Reference">
+        <header>Reference</header></section>
+
 </main>
 <nav id="navbar"><header></header></nav>
 </html>
