--- a/index.html
+++ b/index.html
@@ -6,7 +6,26 @@
       <link rel="stylesheet" href="styles.css">
     <title>JavaScript and Java</title>
     </head>
-    <main>
+    <nav id="navbar">
+      <header class="nav-header">JS Documentation</header>
+      <div class="nav-links">
+        <a class="nav-link" href="#Introduction">Introduction</a>
+        <a class="nav-link" href="#What_you_should_already_know">What you should already know</a>
+        <a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
+        <a class="nav-link" href="#Hello_world">Hello world</a>
+        <a class="nav-link" href="#Variables">Variables</a>
+        <a class="nav-link" href="#Declaring_variables">Declaring variables</a>
+        <a class="nav-link" href="#Variable_scope">Variable scope</a>
+        <a class="nav-link" href="#Global_variables">Global variables</a>
+        <a class="nav-link" href="#Constants">Constants</a>
+        <a class="nav-link" href="#Data_types">Data types</a>
+        <a class="nav-link" href="#if...else_statement">if...else statement</a>
+        <a class="nav-link" href="#while_statement">while statement</a>
+        <a class="nav-link" href="#Function_declarations">Function declarations</a>
+        <a class="nav-link" href="#Reference">Reference</a>
+      </div>
+    </nav>
+    <main id="main-doc">
     <section class="main-section" id="Introduction">
         <header>Introduction</header>
           <p>
@@ -258,7 +277,7 @@
           think of objects as named containers for values, and functions as
           procedures that your application can perform.</p>
       </section>
-      <section class="main-section" id="if..else_statement">
+      <section class="main-section" id="if...else_statement">
         <header>if...else statement</header>
           <p>Use the if statement to execute a statement if a logical condition is
           true. Use the optional else clause to execute a statement if the
@@ -392,23 +411,4 @@
           </ul>
       </section>
     </main>
-<nav id="navbar">
-  <header class="nav-header">JS Documentation</header>
-  <div class="nav-links">
-    <a class="nav-link" href="#Introduction">Introduction</a>
-    <a class="nav-link" href="#What_you_should_already_know">What you should already know</a>
-    <a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
-    <a class="nav-link" href="#Hello_world">Hello world</a>
-    <a class="nav-link" href="#Variables">Variables</a>
-    <a class="nav-link" href="#Declaring_variables">Declaring variables</a>
-    <a class="nav-link" href="#Variable_scope">Variable scope</a>
-    <a class="nav-link" href="#Global_variables">Global variables</a>
-    <a class="nav-link" href="#Constants">Constants</a>
-    <a class="nav-link" href="#Data_types">Data types</a>
-    <a class="nav-link" href="#if..else_statement">if..else statement</a>
-    <a class="nav-link" href="#while_statement">while statement</a>
-    <a class="nav-link" href="#Function_declarations">Function declarations</a>
-    <a class="nav-link" href="#Reference">Reference</a>
-  </div>
-</nav>
 </html>
